fixed issues on mobile text align and spacing

--- a/src/components/pages/About/style.css
+++ b/src/components/pages/About/style.css
@@ -105,7 +105,7 @@
   .about-uxsociety h2, .about-uxsociety p {
     margin: auto 0;
     padding: 0;
-    text-align: center;
+    text-align: left;
   }
 
   .about-CoreValues {
